[gd_scene load_steps=12 format=3 uid="uid://cpytkw5784g3i"]

[ext_resource type="Script" path="res://main.gd" id="1_47kuj"]
[ext_resource type="Texture2D" uid="uid://dp2sxb6hdlcp7" path="res://images/creativite.png" id="3_0cgfe"]
[ext_resource type="Texture2D" uid="uid://e6o1cpp23a6x" path="res://images/vie_famille.png" id="3_6vj60"]
[ext_resource type="Texture2D" uid="uid://d2q5nexaq2ara" path="res://images/chrono.png" id="3_qlnja"]
[ext_resource type="Texture2D" uid="uid://tqkt6aiddivf" path="res://images/vie_famille_full.png" id="4_frkv5"]
[ext_resource type="Texture2D" uid="uid://cmf4jhvvtlu4v" path="res://images/chrono_full.png" id="4_k0u7c"]
[ext_resource type="Texture2D" uid="uid://cf8yv75dtqeav" path="res://images/creativite_full.png" id="4_k64f8"]
[ext_resource type="Texture2D" uid="uid://dyv5drdl8topb" path="res://images/sante_mentale.png" id="5_adfv6"]
[ext_resource type="Texture2D" uid="uid://0gmcb05rrl48" path="res://images/sante_mentale_full.png" id="6_kk18s"]
[ext_resource type="PackedScene" uid="uid://c76jd4bevhc8b" path="res://card_viewer.tscn" id="10_2ugs6"]
[ext_resource type="PackedScene" uid="uid://dqd306sitp07o" path="res://CardDeck.tscn" id="11_dmsid"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_47kuj")

[node name="LabelProblem" type="Label" parent="."]
offset_left = 225.0
offset_top = 132.0
offset_right = 495.0
offset_bottom = 225.0
text = "Problématique"

[node name="LabelTempsJeuPossibleImpact" type="Label" parent="."]
offset_left = 659.0
offset_top = 7.0
offset_right = 682.0
offset_bottom = 30.0
text = " "

[node name="ProgressTempsJeu" type="TextureProgressBar" parent="."]
offset_left = 555.0
offset_top = 73.0
offset_right = 780.0
offset_bottom = 298.0
scale = Vector2(0.3, 0.3)
fill_mode = 3
texture_under = ExtResource("3_qlnja")
texture_progress = ExtResource("4_k0u7c")

[node name="TempsJeu" type="HBoxContainer" parent="."]
offset_left = 519.0
offset_top = 34.0
offset_right = 676.0
offset_bottom = 61.0

[node name="Label" type="Label" parent="TempsJeu"]
layout_mode = 2
text = "     Temps de jeu      "

[node name="progress" type="ProgressBar" parent="TempsJeu"]
layout_mode = 2

[node name="ProgressSanteMentale" type="TextureProgressBar" parent="."]
offset_left = 387.0
offset_top = 70.0
offset_right = 612.0
offset_bottom = 295.0
scale = Vector2(0.3, 0.3)
fill_mode = 3
texture_under = ExtResource("5_adfv6")
texture_progress = ExtResource("6_kk18s")

[node name="LabelSanteMentalePossibleImpact" type="Label" parent="."]
offset_left = 497.0
offset_top = 19.0
offset_right = 520.0
offset_bottom = 42.0
text = " "

[node name="SanteMentale" type="HBoxContainer" parent="."]
offset_left = 362.0
offset_top = 35.0
offset_right = 511.0
offset_bottom = 62.0

[node name="Label" type="Label" parent="SanteMentale"]
layout_mode = 2
text = "   Santé mentale    "

[node name="progress" type="ProgressBar" parent="SanteMentale"]
layout_mode = 2

[node name="ProgressCreativite" type="TextureProgressBar" parent="."]
offset_left = 222.0
offset_top = 55.0
offset_right = 366.0
offset_bottom = 202.0
fill_mode = 3
texture_under = ExtResource("3_0cgfe")
texture_progress = ExtResource("4_k64f8")

[node name="LabelCreativitePossibleImpact" type="Label" parent="."]
offset_left = 297.0
offset_top = 9.0
offset_right = 320.0
offset_bottom = 32.0
text = " "

[node name="Creativite" type="HBoxContainer" parent="."]
offset_left = 206.0
offset_top = 31.0
offset_right = 310.0
offset_bottom = 58.0

[node name="Label" type="Label" parent="Creativite"]
layout_mode = 2
text = "Creativité     "

[node name="progress" type="ProgressBar" parent="Creativite"]
layout_mode = 2

[node name="ProgressVieFamille" type="TextureProgressBar" parent="."]
offset_left = 56.0
offset_top = 59.0
offset_right = 200.0
offset_bottom = 206.0
scale = Vector2(0.5, 0.5)
fill_mode = 3
texture_under = ExtResource("3_6vj60")
texture_progress = ExtResource("4_frkv5")

[node name="LabelVieFamillePossibleImpact" type="Label" parent="."]
offset_left = 144.0
offset_top = 9.0
offset_right = 167.0
offset_bottom = 32.0
text = " "

[node name="VieFamille" type="HBoxContainer" parent="."]
offset_left = 23.0
offset_top = 30.0
offset_right = 156.0
offset_bottom = 57.0

[node name="Label" type="Label" parent="VieFamille"]
layout_mode = 2
text = "Vie de famille     "

[node name="progress" type="ProgressBar" parent="VieFamille"]
layout_mode = 2

[node name="ChoiceA" type="Button" parent="."]
offset_left = 67.0
offset_top = 232.0
offset_right = 258.0
offset_bottom = 353.0
text = "Choix A"

[node name="LabelA" type="Label" parent="."]
offset_left = 68.0
offset_top = 371.0
offset_right = 257.0
offset_bottom = 443.0
text = "TEXTE EXPLICATIF A"

[node name="ChoiceB" type="Button" parent="."]
offset_left = 455.0
offset_top = 226.0
offset_right = 653.0
offset_bottom = 354.0
text = "Choix B"

[node name="LabelB" type="Label" parent="."]
offset_left = 459.0
offset_top = 366.0
offset_right = 651.0
offset_bottom = 443.0
text = "TEXTE EXPLICATIF B"

[node name="LabelGameOver" type="Label" parent="."]
offset_left = 264.0
offset_top = 508.0
offset_right = 456.0
offset_bottom = 585.0

[node name="LabelObjective" type="Label" parent="."]
offset_left = 98.0
offset_top = 512.0
offset_right = 654.0
offset_bottom = 589.0
text = "XXXX"

[node name="CardViewer" parent="." instance=ExtResource("10_2ugs6")]
offset_left = 771.0
offset_top = 175.0
offset_right = 859.0
offset_bottom = 290.0

[node name="CardDeck" parent="." instance=ExtResource("11_dmsid")]
position = Vector2(862, 373)

[connection signal="mouse_entered" from="ChoiceA" to="." method="_on_choice_a_mouse_entered"]
[connection signal="mouse_exited" from="ChoiceA" to="." method="_on_choice_a_mouse_exited"]
[connection signal="mouse_entered" from="ChoiceB" to="." method="_on_choice_b_mouse_entered"]
[connection signal="mouse_exited" from="ChoiceB" to="." method="_on_choice_b_mouse_exited"]
